kubernetes/platform/production/keycloak/resources/keycloak-deployment.yml
# keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        # 最新のKeycloakイメージを指定
        image: quay.io/keycloak/keycloak:26.4
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 1
        volumeMounts:
            - name: polar-keycloak-config-volume
              mountPath: /opt/keycloak/data/import
        resources:
          requests:
            cpu: "0.2"
            memory: "756Mi"
          limits:
            cpu: "2"
            memory: "756Mi"
      volumes:
        - name: polar-keycloak-config-volume
          configMap:
            name: keycloak-config
